# CNN_HortiFruit

./: ImageClassifierCNN.ipynb  README.MD  pyproject.toml
