[tool.poetry]
name = "project 6 - cnn image classifier"
version = "0.1.0"
description = ""
authors = ["NicolasSP90 <nicolassp90@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
ipykernel = "^6.29.5"
torch = "^2.4.1"
torchvision = "^0.19.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
gradio = "^4.44.0"
ipython = "^8.27.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
